Pages are modifiable now.

--- a/templates/pages/buyers.html
+++ b/templates/pages/buyers.html
@@ -11,17 +11,7 @@
 
 <div id="map" class="single">
 	
-	{% include "elements/media/tenants.html" %}
-	
-	<div class="map_description col1">
-		<h2>{% gettext buyers-column_1_header %}</h2>
-		<p>{% gettext buyers-column_1_description %}</p>
-	</div>
-	
-	<div class="map_description col2">
-		<h2>{% gettext buyers-column_2_header %}</h2>
-		{% gettext buyers-column_2_description %}
-	</div>
+	{% include "elements/reusable/row_content.html" %}
 	
 </div>
 
