--- a/templates/pages/currency_exchange.html
+++ b/templates/pages/currency_exchange.html
@@ -11,15 +11,7 @@
 
 <div id="map" class="single">
 
-	{% include "elements/media/tenants.html" %}
-
-	<div class="map_description col1">
-		<h2>{% gettext currency_exchange-header %}</h2>
-		<p>{% gettext currency_exchange-paragraph_1 %}</p>
-		<p>{% gettext currency_exchange-paragraph_2 %}</p>
-		{% gettext currency_exchange-paragraph_3 %}
-		<p>{% gettext currency_exchange-paragraph_4 %}</p>
-	</div>
+	{% include "elements/reusable/row_content.html" %}
 	
 </div> <!-- end of: map -->
 
