--- a/templates/pages/landlords.html
+++ b/templates/pages/landlords.html
@@ -11,6 +11,10 @@
 
 <div id="map">
 
+	{% include "elements/reusable/row_content.html" %}
+
+
+{% comment %}
 	{% include "elements/media/landlords.html" %}
 
 	<div class="row" id="row1"> <!-- TODO: Needs data. Probably also needs tables. -->
@@ -75,6 +79,7 @@
 		</div>
 
 	</div> <!-- end of: row3 -->
+{% endcomment %}
 
 </div>
 
