--- a/templates/pages/tenants.html
+++ b/templates/pages/tenants.html
@@ -11,13 +11,7 @@
 
 <div id="map" class="single">
 	
-	{% include "elements/media/tenants.html" %}
-	
-	<div class="map_description col1">
-		<h2>{% gettext tenants-header %}</h2>
-		<p>{% gettext tenants-paragraph_1 %}</p>
-		<p>{% gettext tenants-paragraph_2 %}</p>
-	</div>
+	{% include "elements/reusable/row_content.html" %}
 	
 </div>
 
