some stuffed related to css changed.

--- a/templates/elements/reusable/iphone_app.html
+++ b/templates/elements/reusable/iphone_app.html
@@ -1,4 +1,3 @@
-<!-- TODO: Translation is needed. -->
 {% load element_translator %}
 <div id="iphone_app">
 	<h3>iPhone app</h3>
@@ -7,4 +6,9 @@
 		<img src="{{ STATIC_URL }}images/iphone-ipad.png" alt="iphone app">
 	</a>
 	<a href="#" class="button_2">{% gettext iphone_app-download %}</a>
+	<div id="emagazine">
+		<h3>{% gettext monthly_magazine-title %}</h3>
+		<p>{% gettext mothly_magazine-description %}</p>
+		<a href="#" class="button_2">{% gettext monthly_magazine-button %}</a>
+	</div>
 </div>
