--- a/templates/elements/reusable/footer.html
+++ b/templates/elements/reusable/footer.html
@@ -58,6 +58,11 @@
 			<ul>
 				<li>+44 (0)208 896 9990</li>
 			</ul>
+			<h4>{% gettext pageless-Follow_us %}</h4>
+			<ul>
+				<li><a href="http://twitter.com/#!/{{ misc.twitter_username }}"><img src="{{ STATIC_URL }}images/footer_twitter_icon.png" alt="{% footer-twitter_alt %}">Twitter</a></li>
+				<li><a href="{{ misc.linkedin_address }}"><img src="{{ STATIC_URL }}images/footer_linkedin_icon.png" alt="{% gettext footer-linkedin_alt %}">LinkedIn</a></li>
+			</ul>
 		</div> <!-- end of: footer_col5 -->
 	</div> <!-- end of: footer top -->
 	<div id="footer_bottom">
