--- a/templates/elements/reusable/footer.html
+++ b/templates/elements/reusable/footer.html
@@ -60,7 +60,7 @@
 			</ul>
 			<h4>{% gettext pageless-Follow_us %}</h4>
 			<ul>
-				<li><a href="http://twitter.com/#!/{{ misc.twitter_username }}"><img src="{{ STATIC_URL }}images/footer_twitter_icon.png" alt="{% footer-twitter_alt %}">Twitter</a></li>
+				<li><a href="http://twitter.com/#!/{{ misc.twitter_username }}"><img src="{{ STATIC_URL }}images/footer_twitter_icon.png" alt="{% gettext footer-twitter_alt %}">Twitter</a></li>
 				<li><a href="{{ misc.linkedin_address }}"><img src="{{ STATIC_URL }}images/footer_linkedin_icon.png" alt="{% gettext footer-linkedin_alt %}">LinkedIn</a></li>
 			</ul>
 		</div> <!-- end of: footer_col5 -->
