--- a/templates/base.html
+++ b/templates/base.html
@@ -3,17 +3,26 @@
 		<meta charset="utf-8" /> 
 		<meta name="viewport" content="width=device-width; initial-scale=1.0;">
 		<title>{% block title %}LIFE Residential{% endblock %}</title>
-		{% block javascript %}
 		<script src="{{ STATIC_URL }}js/jquery.min.js" type="text/javascript"></script>
 		<script src="{{ STATIC_URL }}js/image_slider_plugin.js" type="text/javascript"></script>
 		<script src="{{ STATIC_URL }}js/scripts.js" type="text/javascript" charset="utf-8"></script>
 		<script src="{{ STATIC_URL }}js/underscore-min.js" type="text/javascript" charset="utf-8"></script>
 		<script src="{{ STATIC_URL }}js/jquery.cookie.js" type="text/javascript" charset="utf-8"></script>
 		<script src="http://maps.googleapis.com/maps/api/js?sensor=false" type="text/javascript" ></script>
+		<script src="{{ STATIC_URL }}js/sprintf.js" type="text/javascript" type="text/javascript" ></script>
+		<script type="text/javascript">
+			// Storing the csrf token
+			var csrf_pattern = /.*value='([a-z0-9]+)'.*/g;
+			var csrf_match = csrf_pattern.exec("{% csrf_token %}");
+			var csrf_token = csrf_match[1];
+			var curr_lang_code = "{{ curr_lang_code }}";
+			console.log(curr_lang_code);
+			var twitter_username = "{{ misc.twitter_username }}"
+		</script>
 		<!-- [if IE]>
 			<script src="{{ STATIC_URL }}js/html5.js" type="text/javascript" charset="utf-8"></script>
 		<![endif]-->
-		{% endblock %}
+		{% block extra_scripts %}{% endblock %}
 		{% block stylesheet %}
 		<link rel="stylesheet" href="{{ STATIC_URL }}css/reset.css" type="text/css" />
 		<link rel="stylesheet" href="{{ STATIC_URL }}css/style.css" type="text/css" />
